# LeadOps

./: .env.example  .gitignore  README.md  actions.py  app.py  check_compliance.py  config.py  database_init.py  db_models.py  environment.py  grader.py  inference.py  master.db-shm  models.py  openenv.yaml  pyproject.toml  requirements.txt  session_manager.py  test_penalties.py
data/: meddic_playbook.json  solutions.json  territory_routing.json
scripts/: dirty_seeder.py  interaction_generator.py
server/: app.py
utils/: score_report.py
